# SpecTopus

./: .gitignore  2D-3D (1).csv  LICENSE  README.md  README_DEMO.md  fitting_agent_demo.py  pyproject.toml  requirements.txt  setup_env.ps1
spectopus/tools/: fitting_agent.py
src/spectopus/tools/: instruct.py
tools/: fitting_agent.py  instruct.py
