[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spectopus"
version = "0.1.0"
authors = [
  { name="Sheryl Lim", email="your.email@example.com" },
]
description = "Automated peak fitting for high-throughput perovskite research"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "google-generativeai",
    "lmfit",
    "tqdm",
    "plotly"
]

[project.urls]
"Homepage" = "https://github.com/SLKS99/SpecTopus"
"Bug Tracker" = "https://github.com/SLKS99/SpecTopus/issues"
